# envfetch

./: CODEOWNERS  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.cargo/: config.toml
.github/: codecov.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: build.yml  ci.yml  coverage.yml  lint.yml  release.yml  test-install.yml  test.yml  vhs.yml
assets/: default_config.toml  envfetch.tape
src/: commands.rs  config.rs  interactive.rs  main.rs  models.rs  utils.rs  variables.rs
src/interactive/: controller.rs  draw.rs  list.rs  state.rs  tests.rs  view.rs
tests/: cli.rs  cli.rs~
