[package]
name = "envfetch"
version = "1.4.0"
edition = "2024"
authors = ["ANKDDEV"]
description = "Lightweight cross-platform CLI tool for working with environment variables"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ankddev/envfetch"
repository = "https://github.com/ankddev/envfetch"

[dependencies]
# Parsing command line options
clap = { version = "4.5.31", features = ["derive"] }
# Printing colored text
colored = "3.0.0"
# Checking similarity of strings
similar-string = "1.4.3"
# Running external proccesses
subprocess = "0.2.9"
# Parsing dotenv-style files
dotenv-parser = "0.1.3"
# Globally setting variables
globalenv = "0.4.2"
# Parallelizing iterators
rayon = "1.10.0"
# Logging
log = "0.4.26"
env_logger = "0.11.6"

[dev-dependencies]
# Asserting CLI programs
assert_cmd = "2.0.16"
# Asserting predicates
predicates = "3.1.3"
# Asserting file system
assert_fs = "1.1.2"
# Creating temporary directories
tempfile = "3.17.1"
