[package]
name = "envfetch"
version = "2.1.2"
edition = "2024"
authors = ["ANKDDEV"]
description = "Lightweight cross-platform CLI tool for working with environment variables"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ankddev/envfetch"
repository = "https://github.com/ankddev/envfetch"

[dependencies]
# Parsing command line options
clap = { version = "4.5.37", features = ["derive"] }
# Checking similarity of strings
similar-string = "1.4.3"
# Parsing dotenv-style files
dotenv-parser = "0.1.3"
# Globally setting variables
globalenv = "0.4.2"
# Parallelizing iterators
rayon = "1.10.0"
# Logging
log = "0.4.27"
env_logger = "0.11.6"
# Interactive mode with TUI
ratatui = "0.29.0"
crossterm = "0.29.0"
# Config parsing
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.21"
# Finding directories
dirs = "6.0.0"

[dev-dependencies]
# Asserting CLI programs
assert_cmd = "2.0.17"
# Asserting predicates
predicates = "3.1.3"
# Asserting file system
assert_fs = "1.1.2"
# Creating temporary directories
tempfile = "3.19.1"
